--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -79,7 +79,54 @@
       </article>
 	  </div>
     </div>
-  </div>
+		 <div class="panel panel-default">
+    <div class="panel-body">
+		<h5>
+			&nbsp;&nbsp;<strong> Creating pool of agents for board games using evolutionary methods.</strong>
+		</h5>
+      <article>
+        <p>
+           <span class="math inline"> The goal is to create a list of acting rules that one can use to play a board game (most likely Hanabi), and then use evolutionary techniques to 
+		   create agents that perform well in the game, by applying part of these rules. Statistical analysis can further be made to characterize diversity of the agents 
+		   and fitness. The project is a bit tedious, but it is straightforward. 
+          </span>
+        </p>
+        <p>
+            <em>Difficulty &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </em> <i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+        <p>
+            <em>Independence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </em>  <i class="fa fa-star"></i><i class="fa fa-star-0"></i><i class="fa fa-star-0"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+         <p>
+            <em>Likelihood of novel results&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+    </article>
+    <article>
+      Prequisites: Have basic knowledge in C++, Java and Python. An idea of what evolutionary techniques are. Huge love for board games!
+      </article>
+      <article>
+        Bonus for having experience with the game of Hanabi.
+      </article>
+	  </div>
+    </div>
+   <h3>Disclaimer</h3>
+	    <div class="panel-body">
+		<h5>
+			&nbsp;&nbsp;<strong> Creating pool of agents for board games using evolutionary methods.
+			 Creating pool of agents for board games using evolutionary methods. Creating pool of agents for board games using evolutionary methods.
+			 Creating pool of agents for board games using evolutionary methods. Creating pool of agents for board games using evolutionary methods.
+			 Creating pool of agents for board games using evolutionary methods. Creating pool of agents for board games using evolutionary methods.
+		</strong>
+		</h5>
+	  </div>
    </section>
 
 
