--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -100,7 +100,7 @@
         <p>
             <em>Independence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          </em>  <i class="fa fa-star"></i><i class="fa fa-star-0"></i><i class="fa fa-star-0"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+          </em>  <i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
             &nbsp;&nbsp;
         </p>
          <p>
@@ -120,10 +120,25 @@
    <h3>Disclaimer</h3>
 	    <div class="panel-body">
 		<h5>
-			&nbsp;&nbsp;<strong> Creating pool of agents for board games using evolutionary methods.
-			 Creating pool of agents for board games using evolutionary methods. Creating pool of agents for board games using evolutionary methods.
-			 Creating pool of agents for board games using evolutionary methods. Creating pool of agents for board games using evolutionary methods.
-			 Creating pool of agents for board games using evolutionary methods. Creating pool of agents for board games using evolutionary methods.
+			&nbsp;&nbsp;<strong> Welcome to my "tinder", e...I meant supervising profile. My job position does not require me to supervise any Master thesis. 
+			I have no contractual or moral obligation to do so. Provided that I receive many emails per week for such a request, 
+			I do not answer back to all of them. There are classes of emails that are more likely not to be answered. Cases like that include, emails from  
+			<p> a) people who seem that they send copy-paste messages until they get a postive response from somewhere</p>
+			<p> b) people that need "taking by the hand" supervision </p>
+			<p> c) people that just need to learn a technique to put in their CV for their job application </p>
+			<p> d) people who are more into titles than learning and exploring </p>
+			<p> e) people who sent me emails in German (I know we are in Germany and I respect that, but getting an email like that it means that you haven't noticed
+				things about me written in my profile). </p>
+			<p> f )people that know everything. I receive mails from students, having answers to my research problems. If I want a relationship with conflict,
+				I will hang out with my gf...thank you very much. I do believe that modesty is a matter of intelligence and wisdom. The worst thing is that I used to be one of these @#!$@. I may make exceptions
+				for people that can back off their attitude...but it is unlikely to be one of those. Three years now I only met one person like that.
+			<p> g) people that are unlucky. Some of you send very nice emails, but I may receive them when I am ultra busy.	
+			<p> I also do not like the use of the word "Mr" (either address me in a casual manner...totally cool with that or if you <em>  have</em> to use polite language, call me 
+				dr. </p>
+			I know that all these sound very rigid and assholy, but it helps with my sanity. With students that I start a master thesis, I try to devote as much time as
+			needed and I get emotionally invested on their progress. Also most projects that I am suggesting are projects that I am working on, so I may get extra passionate about it.
+			Last thing: If we start a thesis together, you have to set your own working boundaries. When I get passionate about something, I may tend to ask for more results. It is hard to put boundaries for
+			you. However, I really know how to respect boundaries, so if you put any I will not push through them.
 		</strong>
 		</h5>
 	  </div>
