--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -120,7 +120,7 @@
    <h3>Disclaimer</h3>
 	    <div class="panel-body">
 		<h5>
-			&nbsp;&nbsp;<strong> Welcome to my "tinder", e...I meant supervising profile. My job position does not require me to supervise any Master thesis. 
+			&nbsp;&nbsp;<strong> Welcome to my <del>tinder</del>, e...I meant supervising profile. My job position does not require me to supervise any Master thesis. 
 			I have no contractual or moral obligation to do so. Provided that I receive many emails per week for such a request, 
 			I do not answer back to all of them. There are classes of emails that are more likely not to be answered. Cases like that include, emails from  
 			<p> a) people who seem that they send copy-paste messages until they get a postive response from somewhere</p>
