--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -130,10 +130,11 @@
 			<p> e) people who sent me emails in German (I know we are in Germany and I respect that, but getting an email like that it means that you haven't noticed
 				things about me written in my profile). </p>
 			<p> f ) people that know everything. I receive mails from students, having answers to my research problems. If I want a relationship with conflict,
-				I will hang out with my gf...thank you very much. I do believe that modesty is a matter of intelligence and wisdom. The worst thing is that I used to be one of these @#!$@. I may make exceptions
+				I will hang out with my gf...thank you very much. I do believe that modesty is a matter of intelligence and wisdom. People who see the vast complexity in things,
+				are rarely cocky. The worst thing is that I used to be one of these @#!$@. I may make exceptions
 				for people that can back off their attitude...but it is unlikely to be one of those. Three years now I only met one person like that.
 			<p> g) people that are unlucky. Some of you send very nice emails, but I may receive them when I am ultra busy.	
-			<p> I also do not like the use of the word "Mr" (either address me in a casual manner...totally cool with that or if you <em>  have</em> to use polite language, call me 
+			<p> I also do not like the use of the word "Mr" (either address me in a casual manner...totally cool with that, or if you <em>  have</em> to use polite language, call me 
 				dr. </p>
 			I know that all these sound very rigid and assholy, but it helps with my sanity. With students that I start a master thesis, I try to devote as much time as
 			needed and I get emotionally invested on their progress. Also most projects that I am suggesting are projects that I am working on, so I may get extra passionate about it.
