--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -130,13 +130,12 @@
 			<p> e) people who sent me emails in German (I know we are in Germany and I respect that, but getting an email like that it means that you haven't noticed
 				things about me written in my profile). </p>
 			<p> f ) people that know everything. I receive mails from students, having answers to my research problems. If I want a relationship with conflict,
-				I will hang out with my gf...thank you very much. I do believe that modesty is created in the edges where intelligence balances wisdom. People who 
+				I will hang out with my gf...thank you very much. I do believe that modesty lives in the minds of those who balance intelligence with wisdom. People who 
 				see the vast complexity in things, are rarely cocky. The worst thing is that I used to be one of these @#!$@. It is possible sometimes that intelligence
-				can be ahead of wisdom, so I may make exceptions
-				for people that can back off their attitude...but it is unlikely for you to be one of those. 
+				can be ahead of wisdom, so I may make exceptions for people that can back off their attitude...but it is unlikely for you to be one of those. 
 			<p> g) people that are unlucky. Some of you send very nice emails, but I may receive them when I am ultra busy.	
-			<p> I also do not like the use of the word "Mr" (either address me in a casual manner...totally cool with that, or if you <em>  have</em> to use polite language, call me 
-				dr. </p>
+			<p> I also do not like the use of the word "Mr". Either address me in a casual manner...totally cool with that, or if you <em>  have</em> to use polite language, call me 
+				dr (at least like that I have some seconds of feeling like a rapper every time I read a new email). </p>
 			I know that all these sound very rigid and assholy, but it helps with my sanity. With students that I start a master thesis, I try to devote as much time as
 			needed and I get emotionally invested on their progress. Also most projects that I am suggesting are projects that I am working on, so I may get extra passionate about it.
 			Last thing: If we start a thesis together, you have to set your own working boundaries. When I get passionate about something, I may tend to ask for more results. It is hard to put boundaries for
