--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -117,6 +117,43 @@
       </article>
 	  </div>
     </div>
+	<div class="panel panel-default">
+    <div class="panel-body">
+		<h5>
+			&nbsp;&nbsp;<strong>  Creating agents that play a variation of the game of GO which include cooperation</strong>
+		</h5>
+      <article>
+        <p>
+           <span class="math inline"> The goal is to use either Neuroevolutional methods or classical RL methods to create 
+		   agents that play a variation of GO, that includes cooperation.
+          </span>
+        </p>
+        <p>
+            <em>Difficulty &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </em> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+        <p>
+            <em>Independence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+         <p>
+            <em>Likelihood of novel results&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+    </article>
+    <article>
+      Prequisites: Know how to build and train Neural Networks in tensorflow or Keras.
+      </article>
+      <article>
+        Bonus for having knowledge in: Mainstream RL/evolutionary algorithms. Some experience with GO. Extra bonus points if you ever watched Hikaru no Go.
+	    </article>
+	  </div>
+    </div>
    <h3>Disclaimer</h3>
 	    <div class="panel-body">
 		<h5>
