--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -154,6 +154,43 @@
 	    </article>
 	  </div>
     </div>
+	<div class="panel panel-default">
+    <div class="panel-body">
+		<h5>
+			&nbsp;&nbsp;<strong> Generating Neural Networks With Neural Networks </strong>
+		</h5>
+      <article>
+        <p>
+           <span class="math inline"> The goal is to train Generative networks that generate weights for other neural networks. An example of produced networks can be those that are related
+		   to Q functions/policies for agents playing games.
+          </span>
+        </p>
+        <p>
+            <em>Difficulty &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </em> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+        <p>
+            <em>Independence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+         <p>
+            <em>Likelihood of novel results&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            &nbsp;&nbsp;
+        </p>
+    </article>
+    <article>
+      Prequisites: Know how to build and train Neural Networks in tensorflow or Keras.
+      </article>
+      <article>
+        Bonus for having knowledge in: Generative adversarial networks.
+	    </article>
+	  </div>
+    </div>
    <h3>Disclaimer</h3>
 	    <div class="panel-body">
 		<h5>
