--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -198,7 +198,7 @@
 		</h5>
       <article>
         <p>
-           <span class="math inline"> The goal is to create agents that play the very cool game of <a href="https://store.steampowered.com/app/453870/Quantum_Chess/"><i class="Quantum Chess"></i></a>. One needs 
+           <span class="math inline"> The goal is to create agents that play the very cool game of <a href="https://store.steampowered.com/app/453870/Quantum_Chess/"> Quantum Chess </a>. One needs 
 		   also to build the enviroment from scratch which makes it a quite demanding project. Only for enthusiasts and lovers of games and physics. For
 		   real intellectuals with ALOT ALOT of free time :-)
           </span>
