--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -229,6 +229,51 @@
 	    </article>
 	  </div>
     </div>
+		 <div class="panel panel-default">
+    <div class="panel-body">
+		<h5>
+			&nbsp;&nbsp;<strong>  Creating a Neural network which analyzes the decision process of humans reacting on a
+			random dot stimuli.</strong>
+		</h5>
+      <article>
+        <p>
+           <span class="math inline"> There are several analytical models that interpret how humans process the uncertainty created by a random dot kinematographic (RDK), and 
+		   produce a number that captures the "belief" of a subject over the hidden-state of the dots. These models operate on various assumptions and there 
+		   is no obvious way to test if they actually behave the way they claim they do. However, there is a way to check if these belief satisfy some properties that 
+		   control theory/decision making theory dictates. The goal is the creation of a Machine learning model that gets some input a RDK and the time of an action and 
+		   spilts out a belief over the hidden-state of the dots. The model will be trained on part of our data and tested on the rest. Then its predicting power will
+		   be compared with one of the analytical models that we have at hand.
+		   
+		   
+		   
+          </span>
+        </p>
+        <p>
+            <em>Difficulty &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </em> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+        <p>
+            <em>Independence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </em>  <i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-sta-or"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+         <p>
+            <em>Likelihood of novel results&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            &nbsp;&nbsp;
+        </p>
+    </article>
+    <article>
+      Prequisites: Know how to build and train Neural Networks. Basic knowledge of probability theory.
+      </article>
+      <article>
+        Bonus for having knowledge in: Meta-learning ideas.
+      </article>
+	  </div>
+    </div>
    <h3>Disclaimer</h3>
 	    <div class="panel-body">
 		<h5>
