--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -4,14 +4,15 @@
   <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
-			&nbsp;&nbsp;<strong>  Meta-learning techniques for few-shot behavior prediction in multi-agent Ad-Hoc cooperation. The game of Hanabi</strong>
+			&nbsp;&nbsp;<strong> Solving cooperative or mixed type games using Reinforcement learning/evolutionary techniques in conjuction with metalearning approaches.</strong>
 		</h5>
       <article>
         <p>
-           <span class="math inline"> Recently Google released a new testbed for RL. The game of Hanabi has many new complexities that older testbed games like Chess and Go
-             do not exhibit. Apart from a quite big state space, the game involves partial information and cooperation between agents. This cooperation is extremely difficult
-          to model because communication between agent can contain meta-information. Although agents that are trained together can achieve high scores, when aggents with different
-          learning experience meet, they exhibit poor performance. The goal is to apply meta-learning ideas to train the agents, so they will be able to adapt to new enviroments (different set of cooperative agents).
+           <span class="math inline">These projects are seperated in three parts and more than one people can work on. The first part is the creation of agents that play a specific 
+		   game (preference for the game to have an intrinsic fitness test...or to exist somewhere a way to measure the performance of our agents). Second part is the development of a 
+		   metalearning techinque that can model a new agent (ad-hoc setting) as fast as possible. Third part is the creation of meta agent that can "understand" its teammates and
+		   deploy a strategy that depends on them.
+		   
           </span>
         </p>
         <p>
@@ -40,42 +41,6 @@
       </article>
 	          <article>
         <strong>The project is quite demanding. It is more suitable for a master than a bachelor thesis (unless you really need aa challenge in your life). It can lead to a PhD.</strong>  
-      </article>
-	  </div>
-    </div>
-	 <div class="panel panel-default">
-    <div class="panel-body">
-		<h5>
-			&nbsp;&nbsp;<strong>  Meta-learning techniques for few-shot image classification.</strong>
-		</h5>
-      <article>
-        <p>
-           <span class="math inline"> The goal is to analyse, compare and potentially extend meta-learning ideas in classification of images.
-          </span>
-        </p>
-        <p>
-            <em>Difficulty &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          </em> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;
-        </p>
-        <p>
-            <em>Independence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;
-        </p>
-         <p>
-            <em>Likelihood of novel results&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;
-        </p>
-    </article>
-    <article>
-      Prequisites: Know how to build and train Neural Networks. Basic knowledge of probability theory.
-      </article>
-      <article>
-        Bonus for having knowledge in: Meta-learning ideas.
       </article>
 	  </div>
     </div>
@@ -117,80 +82,7 @@
       </article>
 	  </div>
     </div>
-	<div class="panel panel-default">
-    <div class="panel-body">
-		<h5>
-			&nbsp;&nbsp;<strong>  Creating agents that play a variation of the game of GO which include cooperation</strong>
-		</h5>
-      <article>
-        <p>
-           <span class="math inline"> The goal is to use either Neuroevolutional methods or classical RL methods to create 
-		   agents that play a variation of GO, that includes cooperation.
-          </span>
-        </p>
-        <p>
-            <em>Difficulty &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          </em> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;
-        </p>
-        <p>
-            <em>Independence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;
-        </p>
-         <p>
-            <em>Likelihood of novel results&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;
-        </p>
-    </article>
-    <article>
-      Prequisites: Know how to build and train Neural Networks in tensorflow or Keras.
-      </article>
-      <article>
-        Bonus for having knowledge in: Mainstream RL/evolutionary algorithms. Some experience with GO. Extra bonus points if you ever watched Hikaru no Go.
-	    </article>
-	  </div>
-    </div>
-	<div class="panel panel-default">
-    <div class="panel-body">
-		<h5>
-			&nbsp;&nbsp;<strong> Generating Neural Networks With Neural Networks </strong>
-		</h5>
-      <article>
-        <p>
-           <span class="math inline"> The goal is to train Generative networks that generate weights for other neural networks. An example of produced networks can be those that are related
-		   to Q functions/policies for agents playing games.
-          </span>
-        </p>
-        <p>
-            <em>Difficulty &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          </em> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;
-        </p>
-        <p>
-            <em>Independence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;
-        </p>
-         <p>
-            <em>Likelihood of novel results&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;
-        </p>
-    </article>
-    <article>
-      Prequisites: Know how to build and train Neural Networks in tensorflow or Keras.
-      </article>
-      <article>
-        Bonus for having knowledge in: Generative adversarial networks.
-	    </article>
-	  </div>
-    </div>
+
 <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
