--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -44,56 +44,18 @@
       </article>
 	  </div>
     </div>
-		 <div class="panel panel-default">
-    <div class="panel-body">
-		<h5>
-			&nbsp;&nbsp;<strong> Creating pool of agents for board games using evolutionary methods.</strong>
-		</h5>
-      <article>
-        <p>
-           <span class="math inline"> The goal is to create a list of acting rules that one can use to play a board game (most likely Hanabi), and then use evolutionary techniques to 
-		   create agents that perform well in the game, by applying part of these rules. Statistical analysis can further be made to characterize diversity of the agents 
-		   and fitness. The project is a bit tedious, but it is straightforward. 
-          </span>
-        </p>
-        <p>
-            <em>Difficulty &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          </em> <i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;
-        </p>
-        <p>
-            <em>Independence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          </em>  <i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;
-        </p>
-         <p>
-            <em>Likelihood of novel results&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;
-        </p>
-    </article>
-    <article>
-      Prequisites: Have basic knowledge in C++, Java and Python. An idea of what evolutionary techniques are. Huge love for board games!
-      </article>
-      <article>
-        Bonus for having experience with the game of Hanabi.
-      </article>
-	  </div>
-    </div>
 
 <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
-			&nbsp;&nbsp;<strong> Training Reinforcement Learning agents to play the game of Quantum Chess </strong>
+			&nbsp;&nbsp;<strong> Anything Quantum related. From Quantum Neural Networks to Quantum Chess </strong>
 		</h5>
       <article>
         <p>
-           <span class="math inline"> The goal is to create agents that play the very cool game of <a href="https://store.steampowered.com/app/453870/Quantum_Chess/"> Quantum Chess </a>. One needs 
-		   also to build the enviroment from scratch which makes it a quite demanding project. Only for enthusiasts and lovers of games and physics. For
-		   real intellectuals with ALOT ALOT of free time :-)
-          </span>
+           <span class="math inline"> This is a field that I would like to gain some knowledge on by playing around. If you feel the same, we can start a project (master thesis) in that 
+		   direction. If you like games, one idea is to create agents that play this very cool chess alternative  <a href="https://store.steampowered.com/app/453870/Quantum_Chess/"> Quantum Chess </a>. 
+		   One needs also to build the enviroment from scratch which makes it a quite demanding project. This option would be really demanding but 
+		   I believe it will have a high payoff. </span>
         </p>
         <p>
             <em>Difficulty &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
