--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -11,7 +11,8 @@
            <span class="math inline">These projects are seperated in three parts and more than one people can work on. The first part is the creation of agents that play a specific 
 		   game (preference for the game to have an intrinsic fitness test...or to exist somewhere a way to measure the performance of our agents). Second part is the development of a 
 		   metalearning techinque that can model a new agent (ad-hoc setting) as fast as possible. Third part is the creation of meta agent that can "understand" its teammates and
-		   deploy a strategy that depends on them.
+		   deploy a strategy that depends on them. Games that we are currently working on: Chess, RenGO, Phantom GO, Hanabi, Starcraft_mini_ganes. Games I would like to work on:
+		   Quantum_chess, Dota2_mini_games.
 		   
           </span>
         </p>
