--- a/_includes/CV.html
+++ b/_includes/CV.html
@@ -1,9 +1,4 @@
-   <!DOCTYPE html>
-<html lang="en">
-
-  <body>
-
-    <div class="container">
+   <div class="container">
 
       <div class="row">
 
@@ -25,7 +20,7 @@
             <a href="mailto:Vaios.laschos@tu-berlin.de"> <a href="mailto:Vaios.laschos@tu-berlin.de"><i class="fa fa-envelope"></i></a></a>/
             <a href="https://www.linkedin.com/in/vaios-laschos-882b01b6?trk=hp-identity-name"><i class="fa fa-linkedin"></i> </a> /
             <a href="https://www.facebook.com/vaios.laschos"><i class="fa fa-facebook"></i> </a>/
-			 <a href="https://plus.google.com/+vaioslaschos/posts"> <i class="fa fa-google-plus"></i> </a>
+			 <a href="https://www.metaskepsis.com"> <i class="fa fa-gamepad"></i> </a>
            
 </span>      
 		</p>
@@ -38,12 +33,22 @@
   <div class="panel panel-default">
     <div class="panel-body">
     <h3>Academic Appointments</h3>
-    <article>
+    
+	<article>
+        <header>
+            <h3><a href="https://www.wias-berlin.de/"> WIAS </a></h3>
+            <span><address>Berlin, Germany. From March 2021</time></span>
+        </header>
+        <p>Working with Professor <a href="https://www.wias-berlin.de/people/spokoiny/"> Vladimir Spokoiny </a>and <a href="https://www.wias-berlin.de/people/dvureche/"> Dr. Pavel Dvurechensky</a> on Bayesian approximations of Wasserstein Baryceneters </a> </p>
+    </article>
+	<article>
         <header>
             <h3><a href="https://www.ni.tu-berlin.de/menue/neural_information_processing_group/">Tu-Berlin</a></h3>
-            <span><address>Berlin, Germany. From January 2018 to present</time></span>
+            <span><address>Berlin, Germany. From January 2018 to February 2021</time></span>
         </header>
-        <p> More details to follow. </p>
+        <p> In my stay at TU-Berlin, I worked in various projects related to risk-senstitive decision making under uncertainty. I also experimented a bit with Generative Adversarial Neural Networks (GANs), where I made a semi-sucesful  
+		attempt to develop an algorithm for training generative networks with the use of arbitrary optimal transportation distances. My biggest passion though was the combination of Reinforcement Learning and Meta Learning for building
+artificial agents that play board/video games. I tried to build a team of students doing their thesis on topics that incorporate these elements. If you are interested in joining us, please check our website www.metaskepsis.com </p>
     </article>
 	<article>
         <header>
